--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </section>
 
         <section id="redes-sociais">
-            <a href="#" target="tela"> <img src="imagens/logo-home.jpg" alt="logo inicio"></a><br>
-            <a href="#" target="tela"> <img src="imagens/logo-youtube.jpg" alt="logo youtube"></a><br>
+            <a href="home.html" target="tela"> <img src="imagens/logo-home.jpg" alt="logo inicio"></a><br>
+            <a href="youtube.html" target="tela"> <img src="imagens/logo-youtube.jpg" alt="logo youtube"></a><br>
             <a href="#" target="tela"> <img src="imagens/logo-github.jpg" alt="Github"></a> <br>
             <a href="#" target="tela"> <img src="imagens/logo-instagram.jpg" alt="Instagram"></a> <br>
             <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a> <br>
