--- a/github.html
+++ b/github.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Youtube</title>
+    <title>GitHub</title>
     <link rel="stylesheet" href="estilo/sociais.css">
-
 </head>
 <body>
-
-    <img src="imagens/tela-youtube.png" alt="">
-    <a href="https://www.youtube.com/@CursoemVideo" target="_blank">Acesse</a>
-  
+    <img src="imagens/tela-github.jpg" alt="Github">
+    <a href="https://github.com/danilocesar87" target="_blank">Acesse</a>
+    
 </body>
 </html>
