--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <section id="redes-sociais">
             <a href="home.html" target="tela"> <img src="imagens/logo-home.jpg" alt="logo inicio"></a><br>
             <a href="youtube.html" target="tela"> <img src="imagens/logo-youtube.jpg" alt="logo youtube"></a><br>
-            <a href="#" target="tela"> <img src="imagens/logo-github.jpg" alt="Github"></a> <br>
-            <a href="#" target="tela"> <img src="imagens/logo-instagram.jpg" alt="Instagram"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a> <br>
+            <a href="github.html" target="tela"> <img src="imagens/logo-github.jpg" alt="Github"></a> <br>
+            <a href="insta.html" target="tela"> <img src="imagens/logo-instagram.jpg" alt="Instagram"></a> <br>
+            <a href="twi.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a> <br>
+            <a href="face.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a> <br>
 
 
         </section>
