--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ h1 {
         @media screen and (orientation: portrait) {
             body {
     
-    background-image: url(../imagens/cev-portrait.jpg);
+    background-image: url(imagens/cev-portrait.jpg);
     background-position: center bottom;
 }
 
@@ -43,7 +43,7 @@ h1 {
         @media screen and (orientation: landscape) {
             body { 
     
-    background-image: url(../imagens/cev-landscape.jpg);
+    background-image: url(imagens/cev-landscape.jpg);
     background-position: left bottom;
 }
 
