--- a/index.html
+++ b/index.html
@@ -3,20 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Media query</title>
-    <link rel="stylesheet" href="estilos/style.css" media="all">
-    <link rel="stylesheet" href="estilos/mediaquery.css">
+    <title>Media Query</title>
+    <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="estilos/style.css">
+
+    
+   
 </head>
 <body>
-    <main>
-        <h1>TESTANDO O MEDIA QUERY</h1>
-        <img id="phone" src="imagens/icon-phone.png" alt="">
-        <img id="tablet" src="imagens/icon-tablet.png" alt="">
-        <img id="print" src="imagens/icon-print.png" alt="">
-        <img id="pc" src="imagens/icon-pc.png" alt="">
-        <img id="tv" src="imagens/icon-tv.png" alt="">
 
-    </main>
+   
     
+
+    <header>
+        <h1>Meu site</h1>
+        <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">
+            menu
+            </span>
+
+        <menu id="itens">
+            <ul>
+                <li><a href="">Opção 1</a></li>
+                <li><a href="">Opção 2 </a></li>
+                <li><a href="">Opção 3</a></li>
+                <li><a href="">Opção 4</a></li>
+                <li><a href="">Opção 5</a></li>
+            </ul>
+        </menu>
+
+
+    </header>
+
+    <main>
+        <article>
+            <h2>Testando Media query</h2>
+            <p> 
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi voluptatum vitae consequatur odit, maiores temporibus, ut laudantium quia dolores velit, aliquid accusamus! Harum saepe ullam hic quas sit eveniet. Aspernatur!
+            </p>
+
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi voluptatum vitae consequatur odit, maiores temporibus, ut laudantium quia dolores velit, aliquid accusamus! Harum saepe ullam hic quas sit eveniet. Aspernatur!
+            </p>
+
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi voluptatum vitae consequatur odit, maiores temporibus, ut laudantium quia dolores velit, aliquid accusamus! Harum saepe ullam hic quas sit eveniet. Aspernatur!
+            </p>
+
+
+        </article>
+    </main>
+
+    <script>
+        function clickMenu() {
+            if (itens.style.display == 'block')
+            {
+            itens.style.display='none'
+            } else {
+            itens.style.display= 'block' }
+        }
+
+    </script>
+
 </body>
 </html>
